--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.6",
+    "@types/react": "^16.8 || ^17.0 || ^18.0",
+    "@types/react-dom": "^16.8 || ^17.0 || ^18.0",
     "bootstrap": "^4.4.1",
     "jquery": "1.9.1 - 3",
     "popper.js": "^1.16.0",
@@ -10,7 +13,10 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.16.0"
+    "react-native": ">=0.59",
+    "react-redux": "^7.2.1 || ^8.0.2",
+    "react-router-dom": "^6.16.0",
+    "redux": "^4 || ^5.0.0-beta.0"
   },
   "scripts": {
     "start": "react-scripts start",
