--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-native": ">=0.59",
     "react-redux": "^7.2.1 || ^8.0.2",
     "react-router-dom": "^6.16.0",
